[package]
name = "practic_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = {version = "0.10", features = ["vendored"]}
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
jsonwebtoken = "9"
sha256="1.5"
lettre = "0.11"
regex = "1.10"
redis = "0.25"